--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
 		"next": "14.2.14",
 		"next-themes": "^0.3.0",
 		"react": "^18",
+		"react-day-picker": "8.10.1",
 		"react-dom": "^18",
 		"react-fast-marquee": "^1.6.5",
 		"react-hook-form": "^7.53.0",
