--- a/frontend/.env
+++ b/frontend/.env
@@ -2,3 +2,12 @@ NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=f34a7a9265b0a2846c88cc89d9407ce5
 NEXT_PUBLIC_ONCHAINKIT_API_KEY=jiDdkGgW7Wu2FE9uSu8Caaqar_n87B9A
 NEXT_PUBLIC_RARIBLEA_MAINNET_API="d494dede-6b0e-4029-a426-90288eeb06b8"
 NEXT_PUBLIC_RARIBLEA_TESTNET_API="fa002e3d-9d44-4902-b577-c93af59d9ca6"
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://postgres:lNNBQCnRVpZTpMQdyXNmtUHNZVpnpVZl@postgres.railway.internal:5432/railway"
