--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,13 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.11.8",
 		"@jup-ag/wallet-adapter": "^0.2.1",
+		"@prisma/client": "5.18.0",
 		"@radix-ui/react-accordion": "^1.2.1",
 		"@radix-ui/react-avatar": "^1.1.1",
 		"@radix-ui/react-dialog": "^1.1.2",
@@ -38,6 +40,7 @@
 		"@solana/web3.js": "^1.95.4",
 		"@tanstack/react-query": "^5.59.0",
 		"@types/canvas-confetti": "^1.6.4",
+		"axios": "^1.7.8",
 		"canvas-confetti": "^1.9.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -67,6 +70,7 @@
 		"eslint": "^8",
 		"eslint-config-next": "14.2.14",
 		"postcss": "^8",
+		"prisma": "5.18.0",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
 	}
