--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
 		"react-fast-marquee": "^1.6.5",
 		"react-hook-form": "^7.53.0",
 		"react-tweet": "^3.2.1",
+		"recharts": "^2.13.3",
 		"tailwind-merge": "^2.5.3",
 		"tailwindcss-animate": "^1.0.7",
 		"zustand": "^5.0.0-rc.2"
